[package]
name = "wsl-dashboard"
version = "0.2.0"
edition = "2021"
description = "WSL-менеджер в браузере"

[dependencies]
axum    = "0.7"
tokio   = { version = "1", features = ["full"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
